# gadfastapi

./: README.md  cli.py  pyproject.toml  requirements.txt
.compose/: .env.example  docker-compose.yml
.templates/: module.toml  project.toml
src/databases/: __init__.py  orm.py  sessions.py  tables.py
src/databases/postgres/: __init__.py  setup.py
src/databases/postgres/crud/: __init__.py  base.py  dummy.py
src/databases/postgres/migrations/: env.py
src/databases/postgres/tables/: __init__.py  base.py  dummy.py
src/domain/: __init__.py
src/domain/collections/exceptions/: dummy.py
src/domain/models/: __init__.py  base.py  dummy.py
src/domain/repositories/: base.py  dummy.py
src/domain/services/: dummy.py
src/endpoints/http/: __init__.py  schemas.py
src/endpoints/http/const/: tags.py
src/endpoints/http/openapi/: __init__.py
src/endpoints/http/openapi/dummy/: routers.py  schemas.py
src/endpoints/http/systemapi/: __init__.py
src/endpoints/http/systemapi/dummy/: routers.py  schemas.py
src/framework/: __init__.py  application.py  asyncio.py  cron.py  health.py  logger.py  sentry.py  settings.py
src/storages/: __init__.py  etcd.py  s3.py
src/storages/s3/: setup.py
src/tools/fastapi/: __init__.py  routing.py
src/utils/: strings.py
tests/: conftest.py  faker.py
tests/factories/tables/: dummy.py
tests/test_integrations/: conftest.py  test_dummy.py
