[project]
name = "gadfaststyle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=14.1.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "gadcodegenerator>=0.0.1",
    "gadfastopenapi>=0.0.1",
    "gadlogging>=0.0.1",
    "gadopenapiconverter==0.0.2",
    "gads3>=0.0.1",
    "gadutils==0.0.2",
    "isort>=6.0.1",
    "motor>=3.7.0",
    "mypy>=1.15.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "radon>=6.0.1",
    "ruff>=0.11.4",
    "sqlalchemy>=2.0.40",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
]
