[project]
name = "gadfaststyle"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Grishchenko",email = "alexanderdemure@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gadutils (>=0.0.2,<0.0.3)",
    "gadasyncblock (>=0.0.1,<0.0.2)",
    "gadlogging (>=0.0.1,<0.0.2)",
    "gadfastsentry (>=0.0.1,<0.0.2)",
    "gadfasthealth (>=0.0.1,<0.0.2)",
    "gadfastopenapi (>=0.0.1,<0.0.2)",
    "gadopenapiconverter (>=0.0.2,<0.0.3)",
    "gadcodegenerator (>=0.0.1,<0.0.2)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "ruff (>=0.11.6,<0.12.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
